# atwood_sim

./: CMakeLists.txt  README.md
libs/: CMakeCache.txt
src/: main.cpp  physics.cpp  physics.hpp
